--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -21,6 +21,7 @@
       <div class="mt-3">
         <a href="/student/edit" class="btn btn-outline-primary me-2">Редактировать профиль</a>
         <a href="/logout_student" class="btn btn-outline-secondary">Выйти</a>
+        <a href="/student/chat" class="btn btn-outline-success">Чат с репетитором</a>
       </div>
     </div>
   </div>
